[package]
name = "cctv-alerts"
authors = ["morgverd"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
dotenv = "0.15.0"
mail-parser = "0.9.4"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.40.0", features = ["full"] }

[features]
debug = []
